# rich-logger

./: LICENSE  README.md  pyproject.toml  setup.py
rich_logger/: __init__.py  rich_logger.py
tests/: test_logger.py
